web 和 api 接口使用不同的认证结果返回

--- a/point-node-java-runtime-core/src/main/resources/static/i18n/messages.properties
+++ b/point-node-java-runtime-core/src/main/resources/static/i18n/messages.properties
@@ -1,2 +1,5 @@
 app.pages.index.title=Index
 app.pages.login.title=Login
+################################################################################
+####
+security.authentication.success=Success
