认证不同的错误信息

--- a/point-node-java-runtime-core/src/main/resources/static/i18n/messages_en.properties
+++ b/point-node-java-runtime-core/src/main/resources/static/i18n/messages_en.properties
@@ -1,3 +1,9 @@
 app.pages.index.title=Index
 app.pages.login.title=Login
 security.authentication.success=Success
+security.authentication.failure=Faliure
+security.authentication.error.locked=Account locked
+security.authentication.error.bad_credentials=Bad Credentials
+security.authentication.error.disabled=Account disabled
+security.authentication.error.account_expired=Account expired
+security.authentication.error.credentials_expired=Credentials expired
