--- a/point-node-java-runtime-core/src/main/resources/static/i18n/messages_zh_CN.properties
+++ b/point-node-java-runtime-core/src/main/resources/static/i18n/messages_zh_CN.properties
@@ -1,3 +1,9 @@
 app.pages.index.title=主页
 app.pages.login.title=登录
 security.authentication.success=成功
+security.authentication.failure=失败
+security.authentication.error.locked=账户已被锁定
+security.authentication.error.bad_credentials=用户名或密码错误
+security.authentication.error.disabled=账户已被禁用
+security.authentication.error.account_expired=账户已过期
+security.authentication.error.credentials_expired=密码已过期
